--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -98,16 +98,16 @@ a[href]
 header
     border: none
     margin: 100px 0
-    a[href]
-        color: $header-link
-        &.on
-            background: $header-link
-            color: $text-color
-            +border-radius(3px)
     div#me
         margin: 0 auto
         max-width: 32em
         vertical-align: middle
+        a[href]
+            color: $header-link
+            &.on
+                background: $header-link
+                color: $text-color
+                +border-radius(3px)
         p
             color: $near-white
             text-align: justify
@@ -200,15 +200,14 @@ div[data-picture]
                     img
                         margin-bottom: -7px
 
-    header
-        a[href]
-            &:hover
-                background: $header-link
-                color: $text-color
-            &.on
-                background: $header-link
-                color: $text-color
-                +border-radius(3px)
+    header #me a[href]
+        &:hover
+            background: $header-link
+            color: $text-color
+        &.on
+            background: $header-link
+            color: $text-color
+            +border-radius(3px)
 
     .collapse a[href]
         position: absolute
